blogapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blogapp
  template:
    metadata:
      labels:
        app: blogapp
    spec:
      containers:
      - name: alexan9
        image: alexan9/assignment4:1.1
        ports:
        - containerPort: 80
